feat: support chrome

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Add furigana",
   "icons": {
-    "38": "icons/icon.svg"
+    "38": "icons/icon.png"
   },
   "web_accessible_resources": [
     "dict/*.dat"
@@ -12,24 +12,31 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["dist/content.js"]
+      "js": [
+        "dist/content.js"
+      ]
     }
   ],
   "default_locale": "en",
   "browser_action": {
     "default_icon": {
-      "38": "icons/icon.svg"
+      "38": "icons/icon.png"
     },
     "default_title": "furigana",
     "default_popup": "setting/options.html"
   },
-  "permissions": ["<all_urls>", "storage", "contextMenus"],
+  "permissions": [
+    "<all_urls>", "storage", "contextMenus"
+  ],
   "background": {
-    "scripts": ["dist/background.js"]
+    "scripts": [
+      "dist/background.js"
+    ]
   },
   "options_ui": {
     "page": "setting/options.html",
-    "browser_style": true
+    "browser_style": true,
+    "chrome_style": true
   },
   "browser_specific_settings": {
     "gecko": {
