--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "kuroshiro": "^1.1.2",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "url-join": "^4.0.0",
+    "webextension-polyfill": "^0.4.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
